--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,6 @@ solutions/ML5/.DS_Store
 
 solutions/ML3_4/.DS_Store
 solutions/utils/__pycache__/data_utils.cpython-38.pyc
+
+solutions/ML5/models/*
+!solutions/ML5/models/.gitkeep 
