--- a/.gitignore
+++ b/.gitignore
@@ -33,8 +33,9 @@ headcam_training_images/*
 fixedcam2_training_data_till_april4
 fixedcam3_training_data_april4_to_april10
 
-# Packages
+# Packages/Repos
 ultralytics/*
+deep-text-recognition-benchmark/*
 
 # training datasets
 datasets/*
